--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -23,7 +23,7 @@
             <i class="fas fa-plus-circle"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="addCol">
-            <button class="dropdown-item curs-ptr" (click)="openModal(addColl,'full')">Entire Document Document</button>
+            <button class="dropdown-item curs-ptr" (click)="openModal(addColl,'full')">Entire Document</button>
             <button class="dropdown-item curs-ptr" (click)="leftSide=true;isSelPage=true">Select Pages</button>
           </div>
         </div>
