--- a/src/styles.scss
+++ b/src/styles.scss
@@ -554,6 +554,12 @@ mat-checkbox {
   }
 }
 
+// for quil editor error message
+.ml-0-9 {
+  margin-left: 0.8rem;
+  font-size: 12px;
+}
+
 // use it for input below quil editor
 .mt-1-2 {
   margin-top: 1.2rem;
