--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -120,7 +120,7 @@
                   <div class="text-hi-dark-grey">
                     <div class="author bg-hi-grey px-3 py-2 rounded-pill mt-1">
                       <span class="bg-warning rounded-circle p-1 text-white">AD</span>
-                      Andrea D'suzza
+                      Andrea D'Souza
                     </div>
                   </div>
                 </div>
