--- a/src/app/shared/components/add-to-coll/add-to-coll.component.html
+++ b/src/app/shared/components/add-to-coll/add-to-coll.component.html
@@ -9,7 +9,7 @@
   <div *ngIf="!collLoad">
   </div>
   <ul class="list-unstyled" *ngIf="!collLoad">
-    <li class="d-flex text-primary curs-ptr border-bottom px-2" (click)="addCntntColl()">
+    <li class="d-flex text-primary curs-ptr border-bottom px-2" (click)="addCollThenCntnt()">
       <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
       <div class="info align-self-center">Create a new Collection</div>
     </li>
