--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
@@ -31,3 +31,58 @@
 .cdk-drag:not(.cdk-drag-dragging) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+
+/* Dragula css */
+
+/* in-flight clone */
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  pointer-events: none;
+}
+/* high-performance display:none; helper */
+.gu-hide {
+  left: -9999px !important;
+}
+/* added to mirrorContainer (default = body) while dragging */
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+/* added to the source element while its mirror is dragged */
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
+}
+
+
+
+
+
+
+
+
+
+.vamp {
+  background: rgba(255, 255, 255, 0.4);
+  list-style: none;
+  padding: 8px;
+  color: #222;
+}
+
+.vamp:not(:last-child) {
+  border-bottom: 1px solid #777;
+}
+
+.hello{
+  display: flex;
+  flex-wrap: wrap
+}
