--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,10 @@ body {
   max-width: fit-content;
 }
 
+.mt-1-85 {
+  margin-top: 1.85rem !important;
+}
+
 .text-hi-dark {
   color: $hi-dark !important;
 }
