--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
@@ -20,6 +20,7 @@
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
+
 .cdk-drag-placeholder {
   opacity: 0;
 }
@@ -44,11 +45,37 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80);
   pointer-events: none;
+
+  .options {
+    display: none;
+  }
+
+  .card-body {
+    position: relative;
+    min-height: 220px;
+    max-height: 220px;
+
+    @media (min-width:1200px) {
+      min-height: 280px;
+      max-height: 280px;
+    }
+
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 95%;
+      max-height: stretch;
+    }
+  }
 }
+
 /* high-performance display:none; helper */
 .gu-hide {
   left: -9999px !important;
 }
+
 /* added to mirrorContainer (default = body) while dragging */
 .gu-unselectable {
   -webkit-user-select: none !important;
@@ -56,6 +83,7 @@
   -ms-user-select: none !important;
   user-select: none !important;
 }
+
 /* added to the source element while its mirror is dragged */
 .gu-transit {
   opacity: 0.2;
@@ -82,7 +110,7 @@
   border-bottom: 1px solid #777;
 }
 
-.hello{
+.hello {
   display: flex;
   flex-wrap: wrap
 }
