--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -701,16 +701,18 @@
               <hr class="{{dispFolder && dispFolder.entityType === 2 ? 'mt-1-85' : 'mt-0'}}">
               <app-loader [type]="'page'" *ngIf="folderLoading"></app-loader>
               <div class="min-ht pl-0 mt-2 mb-0" cdkDropList id="fldrLists" [cdkDropListData]="wrkspcItems"
-                (cdkDropListDropped)="drop($event)"  *ngIf="!folderLoading">
-                <div class="main row py-4" *ngIf="wrkspcItems.length > 0" dragula="wrkspc-items" [(dragulaModel)]="wrkspcItems">
-                  <div [ngClass]="isNotDrag()?'no-drag':''" class="view-main curs-ptr my-2 p-2 col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6"
-                    *ngFor="let wi of wrkspcItems" >
+                (cdkDropListDropped)="drop($event)" *ngIf="!folderLoading">
+                <div class="main row py-4" *ngIf="wrkspcItems.length > 0" dragula="wrkspc-items"
+                  [(dragulaModel)]="wrkspcItems">
+                  <div [ngClass]="isNotDrag()?'no-drag':''"
+                    class="view-main curs-ptr my-2 p-2 col-xl-3 col-lg-4 col-md-3 col-sm-4 col-6"
+                    *ngFor="let wi of wrkspcItems">
                     <ng-container *ngIf="(wi.entityType === 1 || wi.entityType === 2) else onlyCntnt">
                       <div *cdkDragPreview>
                         <img style="width:100px;height:100px" [src]="wi.imagePath?wi.imagePath:fldrIcon">
                       </div>
                       <div class="image">
-                        <img [src]="wi.imagePath?wi.imagePath:fldrIcon" (click)="changeFolder(wi)" style="max-height:140px;max-width:400px">
+                        <img [src]="wi.imagePath?wi.imagePath:fldrIcon" (click)="changeFolder(wi)">
                         <div class="dropdown" style="z-index:1;">
                           <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
                             data-toggle="dropdown">
@@ -750,7 +752,7 @@
                         <img [src]="getImg(wi)" style="width:100px;height:100px">
                       </div>
                       <div class="image">
-                        <img [src]="getImg(wi)" style="max-height:140px;max-width:400px">
+                        <img [src]="getImg(wi)">
                         <div class="dropdown" style="z-index:1;"
                           *ngIf="!dispFolder ||(dispFolder && (dispFolder.entityType==1 || dispFolder.entityType==3))">
                           <button class="btn btn-light btn-sm dropdown-toggle" type="button"
