--- a/src/styles.scss
+++ b/src/styles.scss
@@ -358,6 +358,7 @@ mat-checkbox {
   font-size: 1rem !important;
   padding: 0.25rem 1.5rem !important;
   white-space: inherit !important;
+  word-break: break-word;
 }
 
 .mat-option:hover:not(.mat-option.mat-active) {
@@ -432,6 +433,7 @@ mat-checkbox {
     // margin-bottom: 0 !important;
     min-height: 25px !important;
     height: fit-content !important;
+    word-break: break-word;
     // background-color: $primary !important;
 
     .mat-chip-remove {
